--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@midwayjs/koa": "^3.0.0",
     "@midwayjs/logger": "^2.14.0",
     "@midwayjs/validate": "^3.0.0",
+    "axios": "^1.4.0",
     "openai": "^3.2.1"
   },
   "devDependencies": {
